--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ build-backend = "maturin"
 
 [project]
 name = "biodivine-bdd"
-version = "0.0.1"
+repository = "https://github.com/sybila/biodivine-lib-bdd-py"
+documentation = "https://deepnote.com/project/Aeonpy-Examples-CR33GbmyS2e4tqqZCcCwjA/%2Fexample_bdd.ipynb"
+description = "Python bindings for the Biodivine Binary Decision Diagram library."
+version = "0.0.2"
 requires-python = ">=3.6"
 classifiers = [
     "Programming Language :: Rust",
