--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,11 +13,11 @@ jobs:
       with:
         manylinux: auto
         command: build
-        args: --release -o dist
+        args: --release -o lib-bdd/dist -m lib-bdd/Cargo.toml
     - name: Upload wheels
       uses: actions/upload-artifact@v2
       with:
-        name: wheels
+        name: wheels-bdd
         path: dist
 
   bdd-windows:
@@ -27,11 +27,11 @@ jobs:
     - uses: messense/maturin-action@v1
       with:
         command: build
-        args: --release --no-sdist -o dist
+        args: --release --no-sdist -o lib-bdd/dist -m lib-bdd/Cargo.toml
     - name: Upload wheels
       uses: actions/upload-artifact@v2
       with:
-        name: wheels
+        name: wheels-bdd
         path: dist
 
   bdd-macos:
@@ -41,11 +41,11 @@ jobs:
     - uses: messense/maturin-action@v1
       with:
         command: build
-        args: --release --no-sdist -o dist --universal2
+        args: --release --no-sdist -o lib-bdd/dist --universal2 -m lib-bdd/Cargo.toml
     - name: Upload wheels
       uses: actions/upload-artifact@v2
       with:
-        name: wheels
+        name: wheels-bdd
         path: dist
 
   bdd-release:
@@ -56,7 +56,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v2
         with:
-          name: wheels
+          name: wheels-bdd
       - name: Publish to PyPI
         uses: messense/maturin-action@v1
         env:
