--- a/lib-bdd/Cargo.toml
+++ b/lib-bdd/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2018"
 
 [lib]
 name = "biodivine_bdd"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 pyo3 = { version = "0.15.1", features = ["extension-module"] }
 biodivine-lib-bdd = "0.3.0"
+
+[build-dependencies]
+pyo3-build-config = "0.15.1"
