--- a/lib-param-bn/Cargo.toml
+++ b/lib-param-bn/Cargo.toml
@@ -5,7 +5,12 @@ edition = "2018"
 
 [lib]
 name = "biodivine_boolean_networks"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 pyo3 = { version = "0.15.1", features = ["extension-module"] }
+biodivine-lib-param-bn = "0.2.0"
+biodivine-lib-bdd-py = { path = "../lib-bdd" }
+
+[build-dependencies]
+pyo3-build-config = "0.15.1"
