WIP: Migrate lib-bdd to the new project format.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,17 @@
 [package]
-name = "biodivine-lib-bdd-py"
+name = "biodivine-aeon-py"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 [lib]
-name = "biodivine_bdd"
+name = "biodivine_aeon"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 pyo3 = { version = "0.15.1", features = ["extension-module"] }
+biodivine-lib-param-bn = "0.2.4"
 biodivine-lib-bdd = "0.3.0"
+biodivine-pbn-control = "0.1.1"
 
 [build-dependencies]
 pyo3-build-config = "0.15.1"
