--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,3 +64,32 @@ jobs:
         with:
           command: upload
           args: --skip-existing *
+
+  conda_deployment_with_new_tag:
+    name: Conda deployment (${{ matrix.os }})
+    if: "startsWith(github.ref, 'refs/tags/')"
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        # For now, windows builds are broken...
+        os: [macos-latest, ubuntu-latest]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Conda environment creation and activation
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          python-version: 3.9
+          environment-file: conda_env.yaml
+          auto-update-conda: false
+          auto-activate-base: false
+          show-channel-urls: true
+      - name: Build and upload the conda packages
+        uses: uibcdf/action-build-and-upload-conda-packages@v1.1-beta.1
+        with:
+          python-version: 3.9
+          meta_yaml_dir: "conda"
+          user: daemontus
+          label: main
+          overwrite: false
+          token: ${{ secrets.ANACONDA_TOKEN }}
