--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.1"
 edition = "2021"
 
 [lib]
-name = "biodivine_aeon"
+name = "biodivine-aeon"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
