--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,6 +68,7 @@ jobs:
   conda_deployment_with_new_tag:
     name: Conda deployment (${{ matrix.os }})
     if: "startsWith(github.ref, 'refs/tags/')"
+    needs: [ macos, windows, linux ]
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
