--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: messense/maturin-action@v1
+      - uses: PyO3/maturin-action@v1
         with:
           manylinux: auto
           command: build
@@ -24,7 +24,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: messense/maturin-action@v1
+      - uses: PyO3/maturin-action@v1
         with:
           command: build
           args: --release --no-sdist -o dist
@@ -38,7 +38,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: messense/maturin-action@v1
+      - uses: PyO3/maturin-action@v1
         with:
           command: build
           args: --release --no-sdist -o dist --universal2
@@ -58,7 +58,7 @@ jobs:
         with:
           name: wheels
       - name: Publish to PyPI
-        uses: messense/maturin-action@v1
+        uses: PyO3/maturin-action@v1
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
