--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ name = "biodivine_aeon"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-pyo3 = { version = "0.17.3", features = ["extension-module"] }
+pyo3 = { version = "0.17.3", features = ["abi3-py37", "extension-module"] }
 biodivine-lib-param-bn = "0.3.0"
 biodivine-lib-bdd = "0.4.1"
 biodivine-pbn-control = { git="https://github.com/sybila/biodivine-pbn-control", branch="v0.2" }
