--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 pyo3 = { version = "0.17.3", features = ["abi3-py37", "extension-module"] }
-biodivine-lib-param-bn = "0.3.0"
-biodivine-lib-bdd = "0.4.1"
-biodivine-pbn-control = "0.2.0"
+biodivine-lib-param-bn = "0.4.1"
+biodivine-lib-bdd = "0.4.2"
+biodivine-pbn-control = { git="https://github.com/sybila/biodivine-pbn-control" }
+z3 = { version="0.11.2", features = ["static-link-z3"] }
 
 [build-dependencies]
 pyo3-build-config = "0.17.3"
