--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,11 +29,17 @@ jobs:
           architecture: x64
       - name: Install Rust toolchain.
         run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain ${{ env.RUST_VERSION }}
+      - name: Set up Clang
+        uses: egor-tensin/setup-clang@v1
+        with:
+          version: 13
+          platform: x64        
       - name: Maturin build.
         uses: PyO3/maturin-action@v1
         with:
           target: x86_64
           manylinux: auto
+          container: off
           args: --release --out target/dist
       - name: Upload wheels
         uses: actions/upload-artifact@v2
