--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,16 +29,22 @@ jobs:
           architecture: x64
       - name: Install Rust toolchain.
         run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain ${{ env.RUST_VERSION }}
+      # Seems that libclang is needed for z3 to work on linux?
       - name: Set up Clang
         uses: egor-tensin/setup-clang@v1
         with:
           version: 13
-          platform: x64        
+          platform: x64 
+      # For now, we are building with container:off, because the
+      # manylinux contrainer does not have the dependencies to 
+      # build with Z3 enabled. We can later modify this and use
+      # our own fork of manylinux.
       - name: Maturin build.
         uses: PyO3/maturin-action@v1
         with:
           target: x86_64
-          manylinux: auto          
+          manylinux: auto
+          container: off          
           args: --release --out target/dist
       - name: Upload wheels
         uses: actions/upload-artifact@v2
