--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,10 @@ env:
   # Make sure to update this from time to time.
   RUST_VERSION: "1.65.0"
   # This is the version currently used by `z3-sys`.
-  # If this even changes, you might also need to increase
-  # minimum macOS version below.
+  # If this ever changes, you might also need to increase
+  # the minimum macOS version below.
   Z3_VERSION: "4.8.12"
+  MACOS_TARGET: "10.16"
   PYTHON_VERSION: "3.9"
 jobs:
   linux:
@@ -78,8 +79,9 @@ jobs:
       - run: echo "CPATH=$Z3_ROOT/include" >> $GITHUB_ENV
       # The considered version of z3 needs at least this version of macOS.
       # If you update z3-sys, you might need to increase this as well.
-      - run: echo "MACOSX_DEPLOYMENT_TARGET=10.16" >> $GITHUB_ENV
-      - uses: PyO3/maturin-action@v1
+      - run: echo "MACOSX_DEPLOYMENT_TARGET=${{ env.MACOS_TARGET }}" >> $GITHUB_ENV
+      - name: Maturin build.
+        uses: PyO3/maturin-action@v1
         with:
           command: build
           args: "--release --universal2 --features static-z3 --out='target/dist'"
@@ -88,4 +90,79 @@ jobs:
         with:
           name: wheels
           path: target/dist
-  
+
+  windows:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout.
+        uses: actions/checkout@v3
+      - name: Setup Z3.
+        id: z3
+        uses: cda-tum/setup-z3@v1
+        with:
+          version: ${{ env.Z3_VERSION }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Setup Python.
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          architecture: x64
+      - name: Setup Rust toolchain.
+        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain ${{ env.RUST_VERSION }}      
+      - name: Maturin build.
+        uses: PyO3/maturin-action@v1
+        with:
+          target: x64
+          args: "--release --features static-z3 --out='target/dist'"
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: wheels
+          path: target/dist
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    if: "startsWith(github.ref, 'refs/tags/')"
+    needs: [ macos, windows, linux ]
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: wheels
+      - name: Publish to PyPI
+        uses: PyO3/maturin-action@v1
+        env:
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        with:
+          command: upload
+          args: --skip-existing *
+
+  conda_deployment_with_new_tag:
+    name: Conda deployment (${{ matrix.os }})
+    if: "startsWith(github.ref, 'refs/tags/')"
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        # For now, windows builds are broken...
+        os: [macos-latest, ubuntu-latest]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Conda environment creation and activation
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          environment-file: conda_env.yaml
+          auto-update-conda: false
+          auto-activate-base: false
+          show-channel-urls: true
+      - name: Build and upload the conda packages
+        uses: uibcdf/action-build-and-upload-conda-packages@v1.1-beta.1
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          meta_yaml_dir: "conda"
+          user: daemontus
+          label: main
+          overwrite: false
+          token: ${{ secrets.ANACONDA_TOKEN }}
