--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,11 +34,11 @@ jobs:
       - name: Setup Rust toolchain.
         run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain ${{ env.RUST_VERSION }}
       # Seems that libclang is needed for z3 to work on linux?
-      - name: Set up Clang
-        uses: egor-tensin/setup-clang@v1
-        with:
-          version: 13
-          platform: x64 
+      #- name: Set up Clang
+      #  uses: egor-tensin/setup-clang@v1
+      #  with:
+      #    version: 13
+      #    platform: x64 
       # For now, we are building with container:off, because the
       # manylinux contrainer does not have the dependencies to 
       # build with Z3 enabled. We can later modify this and use
@@ -48,8 +48,9 @@ jobs:
         with:
           target: x86_64
           manylinux: auto
-          container: off          
-          args: "--release --features static-z3 --compatibility manylinux_2_24 --out='target/dist'"
+          #container: off 
+          # --features static-z3 --compatibility manylinux_2_24         
+          args: "--release --out='target/dist'"
       - name: Upload wheels
         uses: actions/upload-artifact@v2
         with:
@@ -79,12 +80,13 @@ jobs:
       - run: echo "CPATH=$Z3_ROOT/include" >> $GITHUB_ENV
       # The considered version of z3 needs at least this version of macOS.
       # If you update z3-sys, you might need to increase this as well.
-      - run: echo "MACOSX_DEPLOYMENT_TARGET=${{ env.MACOS_TARGET }}" >> $GITHUB_ENV      
+      #- run: echo "MACOSX_DEPLOYMENT_TARGET=${{ env.MACOS_TARGET }}" >> $GITHUB_ENV      
       - name: Maturin build.
         uses: PyO3/maturin-action@v1
         with:
           command: build
-          args: "--release --universal2 --features static-z3 --out='target/dist' -- -v -D MACOSX_DEPLOYMENT_TARGET=11.0"
+          # --features static-z3  -- -v -D MACOSX_DEPLOYMENT_TARGET=11.0
+          args: "--release --universal2  --out='target/dist'"
       - name: Upload wheels
         uses: actions/upload-artifact@v2
         with:
@@ -114,7 +116,8 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: x64
-          args: "--release --features static-z3 --out='target/dist'"
+          # --features static-z3
+          args: "--release --out='target/dist'"
       - name: Upload wheels
         uses: actions/upload-artifact@v2
         with:
