--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,19 +77,15 @@ jobs:
       - name: Setup Rust toolchain.
         run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain ${{ env.RUST_VERSION }}
       # Explicitly add z3 to include path (probably some setup-z3 bug).
-      - run: echo "CPATH=$Z3_ROOT/include" >> $GITHUB_ENV
-      - run: echo "LD_LIBRARY_PATH=$Z3_ROOT/lib" >> $GITHUB_ENV      
+      - run: echo "CPATH=$Z3_ROOT/include" >> $GITHUB_ENV      
       # The considered version of z3 needs at least this version of macOS.
-      # If you update z3-sys, you might need to increase this as well.
-      - run: echo "MACOSX_DEPLOYMENT_TARGET=${{ env.MACOS_TARGET }}" >> $GITHUB_ENV      
+      # Interestingly, setting MACOSX_DEPLOYMENT_TARGET does not work, but this does.
       - run: echo "CMAKE_OSX_DEPLOYMENT_TARGET=${{ env.MACOS_TARGET }}" >> $GITHUB_ENV
       - name: Maturin build.
         uses: PyO3/maturin-action@v1
         with:
-          command: build
-          # --features static-z3  -- -v -D MACOSX_DEPLOYMENT_TARGET=11.0
-          # --universal2
-          args: "--release --features static-z3 --out='target/dist'"
+          command: build          
+          args: "--release --universal2 --features static-z3 --out='target/dist'"
       - name: Upload wheels
         uses: actions/upload-artifact@v2
         with:
@@ -114,14 +110,12 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
           architecture: x64
       - name: Setup Rust toolchain.
-        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain ${{ env.RUST_VERSION }}      
-      - run: echo "CPATH=$Z3_ROOT/include" >> $GITHUB_ENV        
+        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain ${{ env.RUST_VERSION }}            
       - name: Maturin build.
         uses: PyO3/maturin-action@v1
         with:
           target: x64
-          # --features static-z3
-          args: "--release --out='target/dist'"
+          args: "--release --features static-z3 --out='target/dist'"
       - name: Upload wheels
         uses: actions/upload-artifact@v2
         with:
