--- a/manylinux-image/Dockerfile
+++ b/manylinux-image/Dockerfile
@@ -3,7 +3,7 @@
 # We inherit from an ubuntu image that is modified to support long-running services
 # consisting of multiple processes. To learn how to define a background services, 
 # consult https://github.com/phusion/baseimage-docker
-FROM quay.io/pypa/manylinux_2_24_x86_64:latest
+FROM quay.io/pypa/manylinux_2_28_x86_64:latest
 
-RUN apt-get update
-RUN apt-get install --yes --no-install-recommends clang z3
+#RUN apt-get update
+RUN dnf install -y clang
