--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "biodivine_aeon" %}
-{% set version = "0.2.0-alpha" %}
+{% set version = "0.2.0a0" %}
 
 package:
   name: "{{ name|lower }}"
