--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,54 +2,31 @@ name: build
 on:
   push:
   pull_request:
-
+env:
+  # A fixed version used for testing, so that the builds don't
+  # spontaneously break after a few years.
+  # Make sure to update this from time to time.
+  RUST_VERSION: "1.65.0"
+  # This is the version currently used by `z3-sys`.
+  # If this ever changes, you might also need to increase
+  # the minimum macOS version below.
+  Z3_VERSION: "4.8.12"
+  MACOS_TARGET: "11.0"
+  PYTHON_VERSION: "3.9"
 jobs:
   linux:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup Z3.
-        id: z3
-        uses: cda-tum/setup-z3@v1
-        with:
-          version: 4.11.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
-          architecture: x64
-      - uses: PyO3/maturin-action@v1
+      - name: Checkout.
+        uses: actions/checkout@v3
+      # On linux, everything is installed in the container,
+      # so we don't really need any dependencies here.
+      - name: Maturin build.
+        uses: PyO3/maturin-action@v1
         with:
           target: x86_64
-          manylinux: auto
-          args: --release --out target/dist
-      - name: Upload wheels
-        uses: actions/upload-artifact@v2
-        with:
-          name: wheels
-          path: target/dist
-
-  windows:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup Z3.
-        id: z3
-        uses: cda-tum/setup-z3@v1
-        with:
-          version: 4.11.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
-          architecture: x64
-      - uses: dtolnay/rust-toolchain@stable
-      - uses: PyO3/maturin-action@v1
-        with:
-          target: x64
-          args: --release --out target/dist
+          container: daemontus/manylinux-aeon:latest                   
+          args: "--release --features static-z3 --compatibility manylinux_2_28 --out='target/dist'"
       - name: Upload wheels
         uses: actions/upload-artifact@v2
         with:
@@ -59,23 +36,60 @@ jobs:
   macos:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout.
+        uses: actions/checkout@v3      
       - name: Setup Z3.
         id: z3
         uses: cda-tum/setup-z3@v1
         with:
-          version: 4.11.2
+          version: ${{ env.Z3_VERSION }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions/setup-python@v4
+      - name: Setup Python.
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: ${{ env.PYTHON_VERSION }}
           architecture: x64
-      - uses: dtolnay/rust-toolchain@stable
-      - uses: PyO3/maturin-action@v1
+      - name: Setup Rust toolchain.
+        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain ${{ env.RUST_VERSION }}
+      # Explicitly add z3 to include path (probably some bug in either 
+      # `setup-z3` or `z3-sys` crate, because this should not be necessary).
+      - run: echo "CPATH=$Z3_ROOT/include" >> $GITHUB_ENV      
+      # The considered version of z3 needs at least this version of macOS.
+      - run: echo "MACOSX_DEPLOYMENT_TARGET=${{ env.MACOS_TARGET }}" >> $GITHUB_ENV
+      - run: echo "CMAKE_OSX_DEPLOYMENT_TARGET=${{ env.MACOS_TARGET }}" >> $GITHUB_ENV
+      - name: Maturin build.
+        uses: PyO3/maturin-action@v1
         with:
           command: build
-          args: --release --out target/dist --universal2
+          # For now, universal builds are disabled, because there is something
+          # wrong with building z3 on arm in this way :/  
+          # --universal2           
+          args: "--release --features static-z3 --out='target/dist'"
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: wheels
+          path: target/dist
+
+  windows:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout.
+        uses: actions/checkout@v3
+      - name: Setup Python.
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          architecture: x64
+      - name: Setup Rust toolchain.
+        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain ${{ env.RUST_VERSION }}            
+      # Surprisingly, windows is the easiest. Just build the thing.
+      - name: Maturin build.
+        uses: PyO3/maturin-action@v1
+        with:
+          target: x64
+          args: "--release --features static-z3 --out='target/dist'"
       - name: Upload wheels
         uses: actions/upload-artifact@v2
         with:
@@ -113,7 +127,7 @@ jobs:
       - name: Conda environment creation and activation
         uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.9
+          python-version: ${{ env.PYTHON_VERSION }}
           environment-file: conda_env.yaml
           auto-update-conda: false
           auto-activate-base: false
@@ -121,7 +135,7 @@ jobs:
       - name: Build and upload the conda packages
         uses: uibcdf/action-build-and-upload-conda-packages@v1.1-beta.1
         with:
-          python-version: 3.9
+          python-version: ${{ env.PYTHON_VERSION }}
           meta_yaml_dir: "conda"
           user: daemontus
           label: main
