--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,17 +17,17 @@ crate-type = ["cdylib", "rlib"]
 static-z3 = ["z3/static-link-z3"]
 
 [dependencies]
-pyo3 = { version = "0.20.0", features = ["abi3-py37", "extension-module", "num-bigint"] }
+pyo3 = { version = "0.22.0", features = ["abi3-py37", "extension-module", "num-bigint", "py-clone"] }
 biodivine-lib-param-bn = { version="0.5.10", features=["solver-z3"] }
 biodivine-lib-bdd = "0.5.13"
 biodivine-pbn-control = "0.3.1"
 biodivine-hctl-model-checker = "0.2.2"
 rand = "0.8.5"
 macros = { path = "macros" }
-zip = "0.6.6"
-num-bigint = "0.4.4"
-num-traits = "0.2.17"
-either = "1.9.0"
+zip = "2.1.3"
+num-bigint = "0.4.6"
+num-traits = "0.2.19"
+either = "1.13.0"
 
 # Include Z3 dependencies as strictly as possible, we don't want
 # this to change because it might break our release builds.
@@ -35,4 +35,4 @@ z3="^0.12.1"
 z3-sys = "^0.8.1"
 
 [build-dependencies]
-pyo3-build-config = "0.20.0"
+pyo3-build-config = "0.22.0"
